[gd_scene load_steps=2 format=3 uid="uid://level_up_test_scene"]

[ext_resource type="Script" path="res://scripts/ui/level_up_test.gd" id="1_test"]

[node name="LevelUpTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level-Up Notification Test"
horizontal_alignment = 1

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Level: 1"
horizontal_alignment = 1

[node name="CurrentXPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "XP: 0 / 100"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LevelUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Trigger Level Up"

[node name="AddXPButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add 50 XP"

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click 'Trigger Level Up' to see the notification.
Click 'Add 50 XP' to gradually gain experience."
horizontal_alignment = 1
autowrap_mode = 2
